<?xml version="1.0" encoding="utf-8"?>
<!-- Обернуть в ScrollView -->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- данные о пользователе -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:textSize="24sp"
            android:text="@string/head_user" />

        <TextView
            android:id="@+id/txvUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:textSize="22sp"
            android:text="@string/empty_space" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginBottom="12dp"
            android:weightSum="100"
            android:orientation="horizontal">


            <Button
                android:id="@+id/btnCreateUser"
                style="@android:style/Widget.Holo.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="3dp"
                android:text="@string/btn_create" />

            <Button
                android:id="@+id/btnUser"
                style="@android:style/Widget.Holo.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="6dp"
                android:text="@string/btn_process" />
        </LinearLayout>

        <!-- данные о напитке -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:textSize="24sp"
            android:text="@string/head_beveridge" />

        <TextView
            android:id="@+id/txvBeveridge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:textSize="22sp"
            android:text="@string/empty_space" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginBottom="12dp"
            android:weightSum="100"
            android:orientation="horizontal">


            <Button
                android:id="@+id/btnCreateBeverige"
                style="@android:style/Widget.Holo.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="3dp"
                android:text="@string/btn_create" />

            <Button
                android:id="@+id/btnBeverige"
                style="@android:style/Widget.Holo.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="6dp"
                android:text="@string/btn_process" />
        </LinearLayout>

        <Button
            android:id="@+id/btnExit"
            style="@android:style/Widget.Holo.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="6dp"
            android:insetLeft="12dp"
            android:insetRight="12dp"
            android:text="@string/btn_exit" />
    </LinearLayout>
</ScrollView>
